# Caseware

./: .gitignore  AGENTS.md  DESIGN.md  README.md  mlflow.db  pyproject.toml  sitecustomize.py  spec.md
.codex/: hooks.json
.codex/agents/: agent-sdk-expert.toml  assignment-guardian.toml  backend-builder.toml  trace-fixture-auditor.toml
.codex/hooks/: deny_secret_file_reads.py
config/: invoice_agent.yaml
documentation/: adk_pattern_audit.md  agent_architecture.md  assignment.md  gemini_thought_tokens_python_report.md  implementation-kickoff-prompt.md
documentation/adr/: ADR-001-adopt-google-adk-mock-first-custom-sse-contract.md
fixtures/invoices/: manifest.json
invoice_agent/: __init__.py  adk_app.py  agent.py  app.py  config.py  fixtures.py  live_gemini.py  main.py  mock_planner.py  reasoning.py  schemas.py  service.py  settings.py  tools.py  trace.py
sample_traces/live_mode_simulated/: final_report.json  final_result.json  sse.jsonl  sse_events.json  trace.jsonl
sample_traces/live_mode_simulated/config/: invoice_agent.yaml
sample_traces/live_mode_simulated/prompts/: request_prompt.txt  system_instruction.txt
sample_traces/mock_folder_run/: final_result.json  sse.jsonl  sse_events.json  trace.jsonl
scripts/: Gemini_Multimodal.py  Structured_Extraction_Gemini.py
tests/: conftest.py  test_adk_web_integration.py  test_agent_pattern.py  test_config_and_tracing.py  test_live_gemini.py  test_mlflow_tracing.py  test_streaming_endpoint.py
transcripts/: codex-session-2026-03-28.md
transcripts/raw/codex/: README.md
(+7 files in other folders)
